# electrofit

./: .gitignore  AMINOACIDS_README.md  README.md  diagram.mmd  input.ef  notes.txt  pyproject.toml
AA_test/: aa.py
electrofit-workspace/: .gitignore  Snakefile  electrofit.toml  from_history.yml  pip_freeze.txt  pyproject.toml
electrofit-workspace/config/: config.yaml
electrofit-workspace/docs/: REFACTOR_PLAN.md  documentation.md
electrofit-workspace/envs/: ambertools.yml  electrofit-analysis.yml  electrofit-run.yml  electrofit.yml
electrofit-workspace/rules/: electrofit.smk
electrofit-workspace/scripts/: gmx.sh  pis.sh  run_bash_on_qcm_1.sh
electrofit-workspace/tests/e2e/: test_step2_local.py  test_step3_gmx_shimmed.py
electrofit-workspace/tests/helpers/: project.py
electrofit-workspace/tests/integration/: electrofit.toml  run_all.sh  run_all_1.sh  run_all_2.sh  run_bash_on_qcm_1.sh  run_bash_on_qcm_2.sh  test_runtime_gmx_flags.py  test_snapshot_header_step3.py  test_step4_residue_abort.py
electrofit-workspace/tests/smoke/: test_imports.py
electrofit-workspace/tests/unit/: test_process_initial_structure_outputs.py  test_remove_defaults_section.py  test_sampling_edge_cases.py  test_sampling_selection.py  test_step6_histograms.py  (+1 more)
electrofit-workspace/tmp_debug/: electrofit.toml
electrofit-workspace/tmp_helpers2/: average_charges.chg
electrofit-workspace/tools/: rewrite_imports.py  strip_sys_path_blocks.py
reconstruct_ef/: pyproject.toml
reconstruct_ef/scripts/: gmx.sh  pc.sh  run_python_on_qcm.sh
reconstruct_ef/tools/: rewrite_imports.py
(+96 files in other folders)
