[project]
name = "electrofit-workspace"
version = "0.0.0"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# Tell uv to use the local workspace copies, not PyPI
electrofit = { workspace = true }
electrofit-fep = { workspace = true }
electrofit-analysis = { workspace = true }